# techinical_test

./: README.md
front-end/: .gitignore  README.md  elm.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
front-end/loaders/: elmLoader.js
front-end/src/: index.js
front-end/src/elm/: Main.elm
front-end/tests/: GetProductAmountTests.elm  GetProductTests.elm  OrderProductsTests.elm  UpdateOfferTests.elm  UpdatePriceTests.elm  UpdateProductListTests.elm
server/: .env  Cargo.toml  README.md  diesel.toml  file:test.db  test.db
server/migrations/2018-10-21-224456_create_posts_and_offers/: down.sql  up.sql
server/src/: db.rs  json.rs  main.rs  models.rs  schema.rs
